# windeffects

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  restore.txt
Engine/Config/CrashReporter/: config.json
Engine/Config/Editor/: editor_mode.ini  editor_viewport.ini  function.ini  tools_panel.ini
Engine/Shaders/Common/: Bindless.hlsli  Camera.hlsli  Color.hlsli  Math.hlsli  Noise.hlsli  Platform.hlsli
Engine/Shaders/Compute/: ComputeCommon.hlsli
Engine/Shaders/Editor/: EditorBackground.hlsl  EditorGrid.hlsl  Grid.hlsl
Engine/Shaders/Materials/: PBR_Lit.hlsli
Engine/Shaders/PostProcess/: ACES.hlsli  Bloom.hlsli  SSAO.hlsli  SSR.hlsli  TAA.hlsli  VolumetricFog.hlsli
Engine/Shaders/Rendering/: ClusteredLighting.hlsli  Deferred.hlsli  GPUDriven.hlsli  Lighting.hlsli  SceneObject.hlsl  SkyAtmosphere.hlsli  UI.hlsl
Engine/Source/Editor/Application/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.hpp  EngineApplication.cpp  EngineApplication.hpp
Engine/Source/Editor/ContentBrowser/: CMakeLists.txt
Engine/Source/Editor/Details/: CMakeLists.txt
Engine/Source/Editor/Docking/: CMakeLists.txt
Engine/Source/Editor/Docking/Private/: DockingModule.cpp
Engine/Source/Editor/EditorGridRenderer/: CMakeLists.txt
Engine/Source/Editor/EditorGridRenderer/Private/: EditorFunctionConfig.cpp  EditorGridRenderer.cpp
Engine/Source/Editor/EditorGridRenderer/Public/: EditorFunctionConfig.hpp  EditorGridRenderer.hpp
Engine/Source/Editor/Environment/: CMakeLists.txt
Engine/Source/Editor/MainFrame/: CMakeLists.txt
Engine/Source/Editor/PlaceActors/: CMakeLists.txt
Engine/Source/Editor/PlaceActors/Private/: PlaceActorsModule.cpp
Engine/Source/Editor/PlaceActors/Private/PlaceActors/: PlaceActorsCatalog.cpp  PlaceActorsCategory.cpp  PlaceActorsConfig.cpp  PlaceActorsItem.cpp  PlaceActorsPanel.cpp  PlaceActorsPlacement.cpp  PlaceActorsRegistration.cpp  PlaceActorsSearch.cpp
Engine/Source/Editor/PlaceActors/Public/PlaceActors/: PlaceActorsCatalog.h  PlaceActorsCategory.h  PlaceActorsConfig.h  PlaceActorsItem.h  PlaceActorsPanel.h  PlaceActorsPlacement.h  PlaceActorsSearch.h  PlaceActorsTypes.h
Engine/Source/Editor/Viewport/: CMakeLists.txt
Engine/Source/Editor/Viewport/Private/: ViewportModule.cpp  ViewportNavigation.cpp  ViewportNavigationPreferences.cpp  ViewportPanel.cpp  ViewportToolbarState.cpp
Engine/Source/Editor/Viewport/Private/Widgets/: ViewportOverlay.cpp  ViewportSliderPopup.cpp  ViewportSliderPopup.hpp  ViewportWidget.cpp
Engine/Source/Editor/Viewport/Public/: ViewportNavigation.hpp  ViewportNavigationPreferences.hpp  ViewportToolbarState.hpp
Engine/Source/Editor/Viewport/Public/Widgets/: ViewportOverlay.hpp  ViewportWidget.hpp
Engine/Source/Programs/CrashReporter/: CMakeLists.txt  ConfigManager.hpp  CrashReporterApp.cpp  CrashReporterApp.hpp  CrashReporterUI.cpp  CrashReporterUI.hpp  IReportProvider.hpp  Main.cpp  ReportSubmitter.hpp  Resource.rc
Engine/Source/Programs/Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  Main.cpp  ModuleBootstrap.cpp  Resource.rc
Engine/Source/Runtime/Renderer/Private/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  GridRenderer.cpp  GridRenderer.hpp  RenderGraph.cpp  RenderGraph.hpp  Renderer.cpp  Renderer.hpp  RendererModule.cpp  SceneRenderer.cpp  SceneRenderer.hpp  ShaderHelper.hpp  VulkanContext.cpp  VulkanContext.hpp
Engine/Source/Runtime/Renderer/Private/Shader/: ShaderCompiler.cpp  ShaderDependencyGraph.cpp  ShaderLibrary.cpp  ShaderPermutationManager.cpp  ShaderPipelineCache.cpp  ShaderTypes.cpp
Engine/Source/Runtime/World/: CMakeLists.txt
Engine/Source/Runtime/World/DefaultScene/: DefaultSceneBuilder.cpp  DefaultSceneBuilder.h  DefaultSceneSettings.cpp  DefaultSceneSettings.h
Engine/Source/Runtime/World/Environment/: EnvironmentDirectionalLight.cpp  EnvironmentDirectionalLight.h  EnvironmentHeightFog.cpp  EnvironmentHeightFog.h  EnvironmentLighting.cpp  EnvironmentLighting.h  EnvironmentSettings.cpp  EnvironmentSettings.h  EnvironmentSkyAtmosphere.cpp  EnvironmentSkyAtmosphere.h  EnvironmentSkyLight.cpp  EnvironmentSkyLight.h  EnvironmentSystem.cpp  EnvironmentSystem.h  EnvironmentTypes.h  EnvironmentVolumetricClouds.cpp  EnvironmentVolumetricClouds.h
Legal/: EULA.md  THIRD_PARTY_NOTICES.md
Source/: Main.cpp
Source/Camera/: EditorCamera.cpp  EditorCamera.hpp
Source/Core/: Logger.cpp  Logger.hpp
Source/Editor/: Editor.cpp  Editor.hpp
Source/HouseUI/Core/: Animation.cpp  Animation.hpp  Animator.hpp  DPIContext.hpp  EventSystem.cpp  EventSystem.hpp  Geometry.hpp  Icon.cpp  Icon.hpp  PaintContext.cpp  PaintContext.hpp  Style.hpp  Theme.hpp  Widget.cpp  Widget.hpp
Source/HouseUI/Layout/: Box.cpp  Box.hpp  OverlayManager.cpp  OverlayManager.hpp  ScrollLayout.cpp  ScrollLayout.hpp  Splitter.cpp  Splitter.hpp
Source/HouseUI/Rendering/: FontAtlas.cpp  FontAtlas.hpp  IconRenderer.cpp  IconRenderer.hpp  UIRenderer.cpp  UIRenderer.hpp
Source/HouseUI/Widgets/: AssetIcons.hpp  Button.cpp  Button.hpp  ContentBrowser.cpp  ContentBrowser.hpp  DropdownMenu.cpp  DropdownMenu.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  MenuBar.cpp  MenuBar.hpp  Panel.cpp  Panel.hpp  PropertyEditor.cpp  PropertyEditor.hpp  SearchBox.cpp  SearchBox.hpp  StatusBar.cpp  StatusBar.hpp  TabWidget.cpp  TabWidget.hpp  TextBox.cpp  TextBox.hpp  TitleBar.cpp  TitleBar.hpp  ToolButton.cpp  ToolButton.hpp  Toolbar.cpp  Toolbar.hpp  TreeView.cpp  TreeView.hpp  ViewportOverlay.cpp  ViewportOverlay.hpp  ViewportWidget.cpp  ViewportWidget.hpp
Source/Renderer/: Framebuffer.cpp  Framebuffer.hpp  GridRenderer.cpp  GridRenderer.hpp  RenderGraph.cpp  RenderGraph.hpp  Renderer.cpp  Renderer.hpp  SceneRenderer.cpp  SceneRenderer.hpp  ShaderHelper.hpp  VulkanContext.cpp  VulkanContext.hpp
Source/Scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
Source/Shaders/: Grid.frag  Grid.vert  SceneObject.frag  SceneObject.vert  Skybox.frag  Skybox.vert  UI.frag  UI.vert
cmake/: BuildLayout.cmake  CleanupRuntimeDir.cmake  ShaderPipeline.cmake
config/editor/: function.ini
(+213 files in other folders)
